--- a/index.html
+++ b/index.html
@@ -47,7 +47,41 @@
           </div>
         </div>
       </nav>
-    
+      <!--End navbar-->
+
+    <!--Hero-->
+    <section class="hero d-flex align-items-center">
+        <div class="container ">
+            <div class="row align-items-center">
+                <div class="col-5">
+                    <span>Don't taste or consume any cleaning products. </span>
+                    <h1>We will wash your car</h1>
+                    <p class="mt-10 mb-25">Getting a good wash requires a few different steps along the way. With extra steps comes a few different tools and products to get the job done.</p>
+                    <!--Form-->
+                    <form>
+                        <div class="row form-shadow">
+                            <div class="col-8 p-0">
+                                    <div>
+                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Your Email">
+                                      </div>
+                                </div>
+                            <div class="div col-4 p-0">
+                                <button type="submit" class="btn form-btn">Send</button>
+                            </div>
+                        </div>
+                      </form>
+                    <!--END form -->
+                </div>
+                <div class="col-7">
+                    <img src="img/carwash.jpg" class="float-end hero-img">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <!--Hero-->
     
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
